docs/samples/invalid/invalid_array_indexing_example.edl
// Expected error: array index must be int.
let arr: array = [1, 2, 3];
print(arr["one"]);
